Issue: Root overflow

--- a/app.css
+++ b/app.css
@@ -1,6 +1,9 @@
 *, *::before, *::after {
     box-sizing: border-box;
+
 }
+
+/*overflow problem*/
 
 body {
    padding: 0;
@@ -11,8 +14,16 @@ body {
 }
 
 header {
+    padding: 0;
+    margin: 0;
    background: #1A1A1A;
    text-align: center;
+}
+
+nav {
+    padding: 0;
+    margin: 0;
+    width: 100%;
 }
 
 svg {
